Bit of clean up, added sorting and basic display of the results.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @()(implicit request: MessagesRequestHeader)
 
-@main("Welcome Snooker O") {
+@main("Welcome to Snooker O") {
   <div class="container">
     <h1>What is Orienteering Snooker</h1>
         <p>Snooker O is a combination of a standard Score event with the rules of Snooker.</p>
