--- a/app/views/upload_results.scala.html
+++ b/app/views/upload_results.scala.html
@@ -1,6 +1,6 @@
 @(form: Form[controllers.FormData])(implicit request: MessagesRequestHeader)
 
-@main("Welcome to Play") {
+@main("Welcome to Snooker O") {
   <div class="container">
     <h1>Upload your results file</h1>
         <p>In SI-Timing, export </p>
