--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,12 +11,12 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")">
-      <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" crossorigin="anonymous"></script>
       <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
       <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-
+      <link href="https://www.sportident.co.uk/sitiming/skins/v1/standard.css" rel="stylesheet" type="text/css">
+      <link href="https://www.sportident.co.uk/sitiming/skins/v1/sitiming.css" rel="stylesheet" type="text/css">
+      <link href="https://www.sportident.co.uk/sitiming/skins/v1/flags.css" rel="stylesheet" type="text/css">
       @* Here's where we render the page title `String`. *@
       <title>@title</title>
     </head>
