Fixed one scoring defect (colour after illegal red) added detailed results display.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,7 +16,7 @@
 
     <div>
       @helper.form(action = routes.HomeController.uploadDisplay) {
-        <input type="submit" id="upload" value="Continue"/>
+        <input type="submit" id="upload" value="Continue" class="btn btn-primary"/>
       }
     </div>
   </div>
