--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,8 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
       <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
       <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
