--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,9 +1,5 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
+@import helpers.CompetitorProcessor
+
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
@@ -16,15 +12,48 @@
       <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
       <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
       <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-      <link href="https://www.sportident.co.uk/sitiming/skins/v1/standard.css" rel="stylesheet" type="text/css">
-      <link href="https://www.sportident.co.uk/sitiming/skins/v1/sitiming.css" rel="stylesheet" type="text/css">
-      <link href="https://www.sportident.co.uk/sitiming/skins/v1/flags.css" rel="stylesheet" type="text/css">
       @* Here's where we render the page title `String`. *@
       <title>@title</title>
     </head>
     <body>
+      <div class="container">
+        <div class="row">
+          <div class="col-2" style="position: sticky">
+              <ul class="nav nav-list flex-column">
+                <li class="nav-header">Navigation</li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/">Homepage</a>
+                </li>
+                <li class="nav-header">Rules</li>
+                <li>
+                  <a class="nav-link" href="@routes.HomeController.adultRulesDisplay">Adult Rules</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="@routes.HomeController.under16RulesDisplay">Under 16's Rules</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="@routes.HomeController.openRulesDisplay">Open class Rules</a>
+                </li>
+
+                <li class="nav-header">Configuration</li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/setup-controls">Configuration</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="@routes.HomeController.uploadDisplay">Select results file</a>
+                </li>
+
+                <li class="nav-header">Results</li>
+                <li class="nav-item">
+                  <a class="@{if(CompetitorProcessor.getCurrentDataSet.isEmpty)"nav-link disabled" else "nav-link"}" href="@routes.ResultsController.resultsSummaryDisplay">Results summary</a>
+                </li>
+              </ul>
+
+          </div>
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
+        </div>
+      </div>
     </body>
 </html>
