--- a/app/views/results_summary.scala.html
+++ b/app/views/results_summary.scala.html
@@ -1,55 +1,59 @@
 @(results: Map[CourseClassType, List[PlacedCompetitor]])(implicit request: MessagesRequestHeader)
 
 @main("Results Summary") {
-  <div class="container">
-    <h1>Results summary by class</h1>
+      <div class="col-8">
+        <h1>Results summary by class</h1>
 
-    @helper.form(action = routes.HomeController.index) {
-      <fieldset id="results_summary">
-        <legend>Course Results</legend>
+        @helper.form(action = routes.HomeController.index) {
+          <legend>Course Results</legend>
 
-        @results.toSeq.map { case (courseClass, comps) =>
-        <div class="resultsblock-title">
-          <h2>@courseClass</h2>
-        </div>
-        <table id="control_@courseClass" class="data_wide">
-          <thead>
-            <tr>
-              <th class="left">Pos</th>
-              <th class="left">Name</th>
-              <th class="left">Club</th>
-              <th class="centre">Age Class</th>
-              <th class="centre">Controls</th>
-              <th class="centre">Time</th>
-              <th class="right">Score</th>
-              <th class="centre">Details</th>
-            </tr>
-          </thead>
-          <tbody>
-            @comps.map { comp =>
-                @defining(routes.HomeController.resultsDetailedDisplay(courseClass.toString, comp.place)) { detailsUrl =>
-                  <tr>
-                    <td class="left">@comp.place</td>
-                    <td class="left">@comp.competitor.name</td>
-                    <td class="left">@comp.competitor.club</td>
-                    <td class="centre">@comp.competitor.ageCat</td>
-                    <td class="centre">@comp.competitor.punchedControls.numberOfControlsPunched</td>
-                    <td class="centre">@comp.competitor.raceTime.timeTaken</td>
-                    <td class="right">@comp.competitor.scores.getFinalScore</td>
-                    <td class="centre"><a href="@detailsUrl">@comp.competitor.name</a></td>
-                  </tr>
+          @results.toSeq.map { case (courseClass, comps) =>
+            <div class="alert alert-danger" role="alert">
+              <h2>@courseClass</h2>
+            </div>
+            <table id="control_@courseClass" class="table table-striped table-sm">
+              <thead>
+                <tr>
+                  <th scope="col" class="left">Pos</th>
+                  <th scope="col" class="left">Name</th>
+                  <th scope="col" class="left">Club</th>
+                  <th scope="col" class="centre">Age Class</th>
+                  <th scope="col" class="centre">Controls</th>
+                  <th scope="col" class="centre">Time</th>
+                  <th scope="col" class="right">Score</th>
+                  <th scope="col" class="centre">Details</th>
+                </tr>
+              </thead>
+              <tbody>
+                @comps.map { comp =>
+                    @defining(routes.ResultsController.resultsDetailedDisplay(courseClass.toString, comp.place)) { detailsUrl =>
+                      <tr>
+                        <td class="left">@comp.place</td>
+                        <td class="left">@comp.competitor.name</td>
+                        <td class="left">@comp.competitor.club</td>
+                        <td class="centre">@comp.competitor.ageCat</td>
+                        <td class="centre">@comp.competitor.punchedControls.numberOfControlsPunched</td>
+                        <td class="centre">@comp.competitor.raceTime.timeTaken</td>
+                        <td class="right">@comp.competitor.scores.getFinalScore</td>
+                        <td class="centre"><a href="@detailsUrl" class="btn btn-outline-secondary btn-sm" ROLE="button">@comp.competitor.name</a></td>
+                      </tr>
+                    }
                 }
-            }
 
-            </tbody>
-            </table>
+                </tbody>
+              </table>
+            <br>
           }
 
-      </fieldset>    @helper.CSRF.formField
-      <div>
-        <input class = "btn btn-primary" type="submit" id="toindex" value="Return to Homepage"/>
+          @helper.CSRF.formField
+          <div>
+            <input class = "btn btn-primary" type="submit" id="toindex" value="Return to Homepage"/>
+          </div>
+        }
+      <br>
       </div>
-    }
-  <br>
-  </div>
+
+      <div class="col-4">
+          <!-- Empty pace holder column -->
+      </div>
 }
