--- a/app/views/import_results.scala.html
+++ b/app/views/import_results.scala.html
@@ -1,9 +1,11 @@
-@(form: Form[controllers.FormData])(implicit request: MessagesRequestHeader)
+@import models.FileNameForm
+
+@(form: Form[models.FileNameForm])(implicit request: MessagesRequestHeader)
 
 @main("Welcome to Snooker O") {
   <div class="col-8">
-    <h1>Upload your results file</h1>
-        <p>To export your event results from SiTiming:</p>
+    <h1>Import your SiTiming results file</h1>
+        <h2>To export your event results from SiTiming:</h2>
         <ul>
           <li>Use the up icon on the left to navigate to the top level of the event in SI</li>
           <li>Select 'Results' from the menu</li>
@@ -18,27 +20,25 @@
         <h2>Future features</h2>
         <ul>
           <li>Add the ability to select the number of reds</li>
-          <li>Add the ability to pick the control number for each 'Ball'</li>
           <li>Provide a save function to create HTML files for publishing</li>
-
         </ul>
 
-
-    @helper.form(action = routes.HomeController.upload, Symbol("enctype") -> "multipart/form-data") {
-      <div id="results_upload_field">
+    <br>
+    @helper.form(action = routes.HomeController.importResultsSubmit, Symbol("enctype") -> "multipart/form-data") {
+      <div id="results_import_field">
 
         <h2>Select your SI Timing results file</h2>
 
         <div>
-          <label for="results_upload">This must be a csv file that was exported from SiTiming as described above</label>
+          <label for="import_results">This must be a csv file that was exported from SiTiming as described above</label>
           <p>
-            <input type="file" id="results_upload" name="results_upload" value="Select file..." class="btn btn-secondary">
+            <input type="file" id="import_results" name="import_results" value="Select file..." class="btn btn-secondary">
           </p>
         </div>
       </div>    @helper.CSRF.formField
 
       <br>
-      <div id="results_upload_field2">
+      <div id="results_import_field2">
         <input type="submit" id="upload" value="Process your chosen file" class="btn btn-primary btn-lg"/>
       </div>
     }
