--- a/app/views/results/core/summary_results_core.scala.html
+++ b/app/views/results/core/summary_results_core.scala.html
@@ -3,11 +3,9 @@
   <div class="col-8">
     <h1>Results summary by class</h1>
     <br>
-    @helper.form(action = routes.HomeController.index) {
-
       @results.toSeq.map { case (courseClass, comps) =>
         <div class="alert alert-danger" role="alert">
-          <h2>@courseClass - @comps.size competitors</h2>
+          <h2 id="heading_@courseClass">@courseClass - @comps.size competitors</h2>
         </div>
         <table id="control_@courseClass" class="table table-striped table-sm">
           <thead>
@@ -38,14 +36,18 @@
 
             </tbody>
           </table>
-        <br>
       }
 
-      @helper.CSRF.formField
-      <div>
-        <input class = "btn btn-primary" type="submit" id="toindex" value="Return to Homepage"/>
-      </div>
-    }
+      @if(!forExport) {
+        <br>
+        @helper.form(action = routes.HomeController.index) {
+
+          @helper.CSRF.formField
+          <div>
+            <input class = "btn btn-primary" type="submit" id="toindex" value="Return to Homepage"/>
+          </div>
+        }
+      }
   </div>
 
   @linkTemplate(forExport: Boolean, place: Int, courseClassType: CourseClassType) = @{
