Added an import facility for the control numbers. Some refactoring. Set the BrowserSpec test to ignore due to the problem with getting the assets via https in a test.

--- a/app/views/import_results.scala.html
+++ b/app/views/import_results.scala.html
@@ -18,7 +18,7 @@
         </ul>
 
     <br>
-    @helper.form(action = routes.HomeController.importResultsSubmit, Symbol("enctype") -> "multipart/form-data") {
+    @helper.form(action = routes.SiImportController.importResultsSubmit, Symbol("enctype") -> "multipart/form-data") {
       <div id="results_import_field">
 
         <h2>Select your SI Timing results file</h2>
