--- a/app/views/navBar.scala.html
+++ b/app/views/navBar.scala.html
@@ -19,10 +19,13 @@
 
           <li class="nav-header">Configuration</li>
           <li class="nav-item">
-            <a class="nav-link" href="/setup-controls">Configuration</a>
+            <a class="nav-link" href="/import-controls">Import controls file</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="@routes.HomeController.importResultsDisplay">Import results file</a>
+            <a class="nav-link" href="/setup-controls">Manually set controls</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="@routes.SiImportController.importResultsDisplay">Import results file</a>
           </li>
 
           <li class="nav-header">Results</li>
