Reworked to break the coupling between the SiTiming course names and the class names used for calculating the scoring.  Included adding a new page to map from SiTiming classes to scoring classes.

--- a/app/views/import_controls.scala.html
+++ b/app/views/import_controls.scala.html
@@ -30,7 +30,9 @@
             <input type="file" id="import_controls" name="import_controls" value="Select file..." class="btn btn-secondary">
           </p>
         </div>
-      </div>    @helper.CSRF.formField
+      </div>
+
+      @helper.CSRF.formField
 
       <br>
       <div id="controls_import_field2">
