--- a/app/views/results/detailed_results.scala.html
+++ b/app/views/results/detailed_results.scala.html
@@ -1,4 +1,4 @@
-@(courseClass: CourseClassType, comp: PlacedCompetitor)(implicit request: MessagesRequestHeader)
+@(courseClass: String, comp: PlacedCompetitor)(implicit request: MessagesRequestHeader)
 
 @numberedPunches = @{ comp.competitor.punchResults.results.zip(LazyList from 1)}
 
