--- a/app/views/results/summary_results.scala.html
+++ b/app/views/results/summary_results.scala.html
@@ -1,4 +1,4 @@
-@(results: Map[CourseClassType, List[PlacedCompetitor]])(implicit request: MessagesRequestHeader)
+@(results: Map[String, List[PlacedCompetitor]])(implicit request: MessagesRequestHeader)
 
 @main("Results Summary") {
   @core.summary_results_core(results)
