--- a/app/views/results/core/detailed_results_core.scala.html
+++ b/app/views/results/core/detailed_results_core.scala.html
@@ -1,4 +1,4 @@
-@(courseClass: CourseClassType, comp: PlacedCompetitor, forExport: Boolean = false, numEntries: Int = 1)(implicit request: MessagesRequestHeader)
+@(courseClass: String, comp: PlacedCompetitor, forExport: Boolean = false, numEntries: Int = 1)(implicit request: MessagesRequestHeader)
 
 @numberedPunches = @{ comp.competitor.punchResults.results.zip(LazyList from 1)}
 
@@ -6,7 +6,7 @@
         <h1>Detailed Results</h1>
 
         <div class="alert alert-primary" role="alert">
-          <h3>Course - @courseClass - @comp.competitor.name - Place: @comp.place</h3>
+          <h3>@comp.competitor.name - @courseClass - Place: @comp.place</h3>
         </div>
 
         <table id="summary_@courseClass" class="table table-striped table-sm">
@@ -72,7 +72,7 @@
 
         @if(forExport){
           @if(comp.place < numEntries) {
-            @defining(s"${courseClass.entryName.toLowerCase}-${comp.place + 1}.html") { linkUrl =>
+            @defining(s"${courseClass.replaceAll(" ", "").toLowerCase}-${comp.place + 1}.html") { linkUrl =>
               <a href="@linkUrl" class="btn btn-primary mb-4" ROLE="button">Next</a>
             }
           }
