--- a/app/views/results/core/detailed_results_core.scala.html
+++ b/app/views/results/core/detailed_results_core.scala.html
@@ -14,30 +14,30 @@
             <tr>
               <th scope="col" class="left">Pos</th>
               <th scope="col" class="left">Name</th>
-              <th scope="col" class="centre">Club</th>
-              <th scope="col" class="centre">Age Class</th>
-              <th scope="col" class="centre">Controls</th>
-              <th scope="col" class="centre">Time</th>
-              <th scope="col" class="centre">Time Penalty</th>
-              <th scope="col" class="centre">Punch Points</th>
-              <th scope="col" class="centre">Age Factor</th>
-              <th scope="col" class="centre">Final Score</th>
+              <th scope="col" class="text-center">Club</th>
+              <th scope="col" class="text-center">Age Class</th>
+              <th scope="col" class="text-center">Controls</th>
+              <th scope="col" class="text-center">Time</th>
+              <th scope="col" class="text-center">Time Penalty</th>
+              <th scope="col" class="text-center">Punch Points</th>
+              <th scope="col" class="text-center">Age Factor</th>
+              <th scope="col" class="text-center">Final Score</th>
             </tr>
           </thead>
           <tbody>
               <tr>
                 <td class="left">@comp.place</td>
                 <td class="left">@comp.competitor.name</td>
-                <td class="centre">@comp.competitor.club</td>
-                <td class="centre">@comp.competitor.ageCat</td>
-                <td class="centre">@comp.competitor.punchedControls.numberOfControlsPunched</td>
-                <td class="centre">@comp.competitor.raceTime.timeTaken</td>
+                <td class="text-center">@comp.competitor.club</td>
+                <td class="text-center">@comp.competitor.ageCat</td>
+                <td class="text-center">@comp.competitor.punchedControls.numberOfControlsPunched</td>
+                <td class="text-center">@comp.competitor.raceTime.timeTaken</td>
                 @defining(if(comp.competitor.scores.timePenalty > 0 )s"-${comp.competitor.scores.timePenalty}" else "0") { penalty =>
-                  <td class="centre">@penalty</td>
+                  <td class="text-center">@penalty</td>
                 }
-                <td class="centre">@comp.competitor.scores.punchScore</td>
-                <td class="centre">@comp.competitor.ageCat.getHandicapValue</td>
-                <td class="centre">@comp.competitor.scores.getFinalScore</td>
+                <td class="text-center">@comp.competitor.scores.punchScore</td>
+                <td class="text-center">@comp.competitor.ageCat.getHandicapValue</td>
+                <td class="text-center">@comp.competitor.scores.getFinalScore</td>
               </tr>
           </tbody>
         </table>
@@ -47,28 +47,28 @@
           <h3>Control breakdown</h3>
         </div>
 
-          <table id="details_@courseClass" class="table table-striped table-sm">
-            <thead>
+        <table id="details_@courseClass" class="table table-striped table-sm">
+          <thead>
+            <tr>
+              <th scope="col" class="left">No.</th>
+              <th scope="col" class="text-center">Control</th>
+              <th scope="col" class="text-center">Colour</th>
+              <th scope="col" class="text-center">Scored</th>
+              <th scope="col" class="left">Explanation</th>
+           </tr>
+          </thead>
+          <tbody>
+            @numberedPunches.map { case (punchData, num) =>
               <tr>
-                <th scope="col" class="left">No.</th>
-                <th scope="col" class="left">Control</th>
-                <th scope="col" class="centre">Colour</th>
-                <th scope="col" class="centre">Scored</th>
-                <th scope="col" class="left">Explanation</th>
-             </tr>
-            </thead>
-            <tbody>
-              @numberedPunches.map { case (punchData, num) =>
-                <tr>
-                  <td class="left">@num</td>
-                  <td class="left">@punchData.controlCode</td>
-                  <td class="right">@punchData.ball @punchData.ball.getBallImage</td>
-                  <td class="centre">@punchData.score</td>
-                  <td class="left">@punchData.description</td>
-                </tr>
-            }
-            </tbody>
-          </table>
+                <td class="left">@num</td>
+                <td class="text-center">@punchData.controlCode</td>
+                <td class="text-center">@punchData.ball @punchData.ball.getBallImage</td>
+                <td class="text-center">@punchData.score</td>
+                <td class="left">@punchData.description</td>
+              </tr>
+          }
+          </tbody>
+        </table>
 
         @if(forExport){
           @if(comp.place < numEntries) {
